<resources>
    <string name="app_name">Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="empty" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="addFriends">Add Friends</string>
    <string name="friends">Friends:</string>
    <string name="add">Add</string>
    <string name="namePrompt">Name:</string>
    <string name="musicCompatibility">Music Compatibility:</string>
    <string name="shareSong">Share what you\'re listening to right now!</string>
    <string name="timer">1:00</string>
    <string name="addSong">Add Song</string>
    <string name="post">Post</string>
    <string name="username">username</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="friends2">Friends</string>
    <string name="name_username">Username</string>

    <string name="name_editUsername">Edit Username</string>
    <string name="name_save">Save</string>
    <string name="name_confirmUsername">Confirm Username</string>
    <string name="name_top10">Top 10 Tracks</string>
    <string name="name_editProfile">Edit Profile</string>
    <string name="connectToSpotify">Connect To Spotify</string>
    <string name="logout">Logout</string>
</resources>