<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignUpFragment" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>