<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

    <TextView
        android:id="@+id/textViewShareSong"
        android:layout_width="294dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/shareSong"
        android:textAppearance="@android:style/TextAppearance.Material.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="118dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textAppearance="@android:style/TextAppearance.Material.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShareSong" />

    <Button
        android:id="@+id/buttonAddSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddSong" />

</androidx.constraintlayout.widget.ConstraintLayout>