<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFriendsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddFriendsFragment" >

    <TextView
        android:id="@+id/textViewAddFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFriends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/editTextEmailSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/friends"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailSearch"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSearch" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmailSearch"
        app:layout_constraintStart_toEndOf="@+id/editTextEmailSearch"
        app:layout_constraintTop_toTopOf="@+id/editTextEmailSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFriends"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends" />
</androidx.constraintlayout.widget.ConstraintLayout>