<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditProfileFragment" >

    <ImageView
        android:id="@+id/chooseProfilePic"
        android:layout_width="199dp"
        android:layout_height="147dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/blank_profile" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/name_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/name_editUsername"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseProfilePic"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/confirmUsername"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="111dp"
        android:hint="@string/name_confirmUsername"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>